--- a/web/bundles/zectranet/css/QnAForum.css
+++ b/web/bundles/zectranet/css/QnAForum.css
@@ -161,10 +161,10 @@
     }
 }
 
-.coments-textarea{
+.comentsTextarea{
     height: 34px !important;
 }
-.coments-textarea:focus{
+.comentsTextareaFocus{
     height: 100px !important;
     opacity: 1;
 }
