--- a/src/ZectranetBundle/Resources/views/QnAThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAThread.html.twig
@@ -169,8 +169,11 @@
                 Answer
             </button>
 
-        </form>
+            <button ng-if="comentButton" ng-click="closeForm()">
+                Close
+            </button>
 
+        </form>
 
     </div>
 
