--- a/src/ZectranetBundle/Resources/views/QnAThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAThread.html.twig
@@ -62,7 +62,7 @@
                 <div class="post-message">
                     {{ thread.message }}
                 </div>
-                    <hr style="margin: 0px;">
+                <hr style="margin: 0px;">
                 <div style="margin: 0px 0 5px 17px;">
                     {% for i in 0..keywords | length - 1 %}
                         <small>{{ keywords[i] }}</small>
@@ -75,11 +75,11 @@
                 <ul class="list-inline" style="height: 30px;">
                     <li>
                         {#<a href="{{ path('zectranet_user_page', {'user_id': thread.user.id}) }}" style="text-decoration: none;">#}
-                            {#<img style="height: 25px;" class="img-responsive" src="{{ asset('') }}documents/{{ thread.user.avatar }}">#}
+                        {#<img style="height: 25px;" class="img-responsive" src="{{ asset('') }}documents/{{ thread.user.avatar }}">#}
                         {#</a>#}
                     </li>
-                    <li style="margin-top: 9px;">
-                          by <a href="{{ path('zectranet_user_page', {'user_id': thread.user.id}) }}" style="text-decoration: none; ">
+                    <li style="margin-top: 9px; color: #AAA;">
+                        by <a href="{{ path('zectranet_user_page', {'user_id': thread.user.id}) }}" style="text-decoration: none; ">
                             {{ thread.user.username }}
                         </a>
                     </li>
@@ -88,11 +88,7 @@
                     </li>
 
                     <li class="pull-right" style="padding: 10px 2px 10px 14px; border-left: 1px solid #dbdbdb; color: #AAA;">
-                        <div style="cursor: pointer" data-toggle="tooltip" data-placement="top" title="asked {{ thread.date | date('d-m-y H:i') }}">
-                            <i class="fa fa-bookmark"></i>
-                        </div>
-
-
+                        <small>asked {{ thread.date | date('d-m-y H:i') }}</small>
                     </li>
                 </ul>
 
@@ -129,7 +125,9 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 post-span">
+                <div class="col-xs-12 post-span" style="display: inline-block;">
+
+
 
                     <ul class="list-inline" style="height: 29px;">
                         <li>
@@ -137,7 +135,7 @@
                             {#<img style="height: 25px;" class="img-responsive" src="{{ asset('') }}documents/{{ thread.user.avatar }}">#}
                             {#</a>#}
                         </li>
-                        <li style="margin-top: 9px;">
+                        <li style="margin-top: 9px; color: #AAA;">
                             by <a href="{{ path('zectranet_user_page', {'user_id': post.user.id}) }}" style="text-decoration: none; ">
                                 {{ post.user.username }}
                             </a>
@@ -147,10 +145,7 @@
                         </li>
 
                         <li class="pull-right" style="padding: 10px 2px 10px 14px; border-left: 1px solid #dbdbdb; color: #AAA;">
-                            <div style="cursor: pointer" data-toggle="tooltip" data-placement="top" title="asked {{ post.posted | date('d-m-y H:i') }}">
-                                <i class="fa fa-bookmark"></i>
-                            </div>
-
+                            <small>asked {{ post.posted | date('d-m-y H:i') }}</small>
                         </li>
                     </ul>
 
@@ -160,42 +155,30 @@
 
     {% endfor %}
 
-    <div class="col-md-12 coments-main">
+    <div class="col-md-1">
+
+        <img style="height: 40px; margin-top: 7px;" class="img-responsive" src="{{ asset('') }}documents/{{ thread.user.avatar }}">
+    </div>
+
+
+
+    <div class="col-md-10 coments-main" style="padding: 0px; margin: 10px 0px 90px -8px;">
+
+
         <form action="{{ path('zectranet_QnA_add_post', { 'thread_id': thread.id }) }}" method="post">
 
-            <textarea name="message" ng-class="textareaSize" ng-change="comentEmpty()" ng-model="comentText" ng-focus="comentButtonFocus()" ng-blur="comentButtonUnFocus()" class="form-control" placeholder="Here is your answer"></textarea>
+            <textarea name="message" ng-class="textareaSize" ng-change="comentEmpty()" ng-model="comentText" ng-focus="comentButtonFocus()" ng-blur="comentButtonUnFocus()" class="form-control" placeholder="{{ app.user.name ~ ' ' ~ app.user.surname }} type here your answer"></textarea>
 
             <button ng-click="clickButton()" type="submit" style="margin-top: 10px;" ng-class="comentButtonActive" ng-if="comentButton" class="btn btn-default btn-primary">
                 Answer
             </button>
 
-            <button ng-if="comentButton" ng-click="closeForm()">
+            <button style="margin-top: 10px;" class="btn btn-default" ng-if="comentButton" ng-click="closeForm()">
                 Close
             </button>
 
         </form>
-
     </div>
-
-
-    {#<div class="row" style="margin-top: 10px;">#}
-        {#<div class="col-md-12">#}
-            {#<form action="{{ path('zectranet_QnA_add_post', { 'thread_id': thread.id }) }}" method="post">#}
-                {#<div class="input-group">#}
-                    {#<textarea style="resize: vertical;" name="message" class="form-control"></textarea>#}
-                    {#<div class="input-group-addon" style="padding: 0;">#}
-                        {#<button type="submit" class="btn btn-default btn-primary" style="width: 72px; height: 72px;">#}
-                            {#Answer#}
-                        {#</button>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</form>#}
-        {#</div>#}
-    {#</div>#}
-
-
-
-
 
 
 
