Enter button is the chats. Task edit page: add sprint and parent task fields.

--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -191,7 +191,7 @@
                                             <i class="fa fa-file"></i>
                                         </button>
                                     </span>
-                                    <textarea id="textarea-post" name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-keypress="pressEnter($event)" ng-model="message"></textarea>
+                                    <textarea id="textarea-post" name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-keypress="pressEnter($event, message)" ng-model="message"></textarea>
                                 <span class="input-group-btn">
                                     <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
                                         <span>Post</span>
@@ -257,8 +257,6 @@
                                     </li>
                                     <li class="pull-right">{% include '@Zectranet/filter.html.twig' %}</li>
                                 </ul>
-
-
                         </div>
 
 
