--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -169,6 +169,34 @@
                         <!-- End Of Task END DATE Select -->
 
                     </div>
+
+                    <!-- Begin Of Task SPRINT Details -->
+                    {% set parent = task.parent %}
+
+                    <div class="row" style="margin-bottom: 10px;">
+                        <div class="col-md-3">
+                            <div class="input-group">
+                                <label class="text-muted form-control-static" style="color: #777;font-weight: 300;">
+                                    Parent task:
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class="col-md-9">
+                            <div class="input-group">
+                                {% if parent %}
+                                    <a style="font-weight: bold;" href="{{ path('zectranet_task_show', {'task_id': parent.id}) }}" class="btn form-control-static text-info">
+                                        {{ parent.name }}
+                                    </a>
+                                {% else %}
+                                    <a style="font-weight: bold;" href="#" class="btn form-control-static text-info">
+                                        none
+                                    </a>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Of Task SPRINT Details -->
                 </form>
                 <!--End of Main Task Info-->
 
@@ -339,6 +367,35 @@
                             </div>
                         </div>
                         <!-- End Of Task ESTIMATED MINUTES Select -->
+
+                        <!-- Begin Of Task SPRINT Details -->
+                        {% set sprint = (task.parentId) ? task.parent.sprint : task.sprint %}
+
+                        <div class="row" style="margin-bottom: 10px;">
+                            <div class="col-md-3">
+                                <div class="input-group">
+                                    <label class="text-muted form-control-static" style="color: #777;font-weight: 300;">
+                                        Sprint:
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="col-md-9">
+                                <div class="input-group">
+                                    {% if sprint %}
+                                        <a style="font-weight: bold;" href="{{ path('zectranet_show_sprint', {'sprint_id': sprint.id, 'office_id': sprint.office.id }) }}" class="btn form-control-static text-info">
+                                            {{ sprint.name }}
+                                        </a>
+                                    {% else %}
+                                        <a style="font-weight: bold;" href="#" class="btn form-control-static text-info">
+                                            none
+                                        </a>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Of Task SPRINT Details -->
+
                         {% set versions = (task.project.parent) ? task.project.parent.versions : task.project.versions %}
                         {% if versions | length > 0 %}
                         <!-- Begin Of Task Version Select -->
@@ -499,7 +556,7 @@
                         </table>
                     </div>
 
-                    <div id="coments"  class="tab-pane fade in active" ng-init="getPosts(0, 100)">
+                    <div id="coments" class="tab-pane fade in active" ng-init="getPosts(0, 100)">
                         <div ng-style="{'height': (posts.length > 0) ? '500px' : '100px'}" style="overflow-y: auto;height: 500px; " id="posts-panel" >
                             <div class="coments" ng-repeat="post in posts"  >
                                 <p style="margin-top: 25px;" ng-init="avatar = generateAsset(urlAsset, 'documents/' + post.user.avatar)">
@@ -525,7 +582,7 @@
                                         <i class="fa fa-file"></i>
                                     </button>
                                 </span>
-                                <textarea id="textarea-post" name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-keypress="pressEnter($event)" ng-model="message"></textarea>
+                                <textarea id="textarea-post" name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-keypress="pressEnter($event, message)" ng-model="message"></textarea>
                                         <span class="input-group-btn">
                                         <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
                                             <span>Post</span>
