Форум хеадер редизайн

--- a/src/ZectranetBundle/Resources/views/QnAThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAThread.html.twig
@@ -125,7 +125,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 post-span" style="display: inline-block;">
+                <div class="col-xs-12 post-span">
 
 
 
