--- a/src/ZectranetBundle/Resources/views/headerForumThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumThread.html.twig
@@ -17,7 +17,7 @@
 
     <div class="row panel panel-default" style="margin-top:20px; border:0;">
         <div class="col-xs-2" style="padding: 10px;">
-            <img class="img-responsive" style="margin: 0 auto;" src="{{ asset('') ~ 'documents/' ~ thread.user.avatar }}" alt="{{ thread.user.username }}"/>
+            <img class="img-responsive" style="width: 95px; margin: 17px auto;" src="{{ asset('') ~ 'documents/' ~ thread.user.avatar }}" alt="{{ thread.user.username }}"/>
             <p class="text-center" style="margin-top: 10px;">
                 <a href="{{ path('zectranet_user_page', {'user_id': thread.userID }) }}" style="word-wrap: break-word; white-space: normal">
                     {{ thread.user.name ~ ' ' ~ thread.user.surname ~ ' (' ~ thread.user.username ~ ')' }}
@@ -43,41 +43,65 @@
     </div>
 
     <div class="row panel panel-default" style="border-width: 1px; border-style: solid; border-color: #F2F2F2; border-radius: 3px;">
-        <div class="panel-heading topic-header-border" style="background-color: #337AB7; height: 50px; color:#fff;">
-            <h5 align="left" style="margin-top: 6px;">Thread posts</h5>
+        <div class="panel-heading topic-header-border" style="background-color: #F6F6F6; height: 40px; color:#AAA; box-shadow: 0px 1px 0px 0px #FFF inset;">
+            <small align="left">Thread posts</small>
         </div>
         <div class="panel-body" style="padding: 10px 25px;">
             {% for post in thread.posts %}
                 <div class="row panel panel-default forum-post">
-                    <div class="col-xs-2" style="padding: 10px; background-color: #FAFAFA">
-                        <img class="img-responsive" style="margin: 0 auto;" src="{{ asset('') ~ 'documents/' ~ post.user.avatar }}" alt="{{ post.user.username }}"/>
-                        <p class="text-center" style="margin-top: 10px;">
-                            <a href="{{ path('zectranet_user_page', {'user_id': post.userID }) }}" style="word-wrap: break-word; white-space: normal;">
-                                {{ post.user.name ~ ' ' ~ post.user.surname ~ ' (' ~ post.user.username ~ ')' }}
-                            </a>
-                        </p>
-                        
+                    <div class="col-xs-2" style="padding: 10px; background-color: #FAFAFA; height: 100%;">
+                        <img class="img-responsive" style="width: 95px; margin: 0 auto;" src="{{ asset('') ~ 'documents/' ~ post.user.avatar }}" alt="{{ post.user.username }}"/>
                     </div>
-                    <div class="col-xs-10" style="min-height: 150px;">
-                        <small class="pull-right text-muted" style="margin-top: 8px;">Posted {{ post.posted | date('Y-m-d H:i') }}</small>
+                    <div class="col-xs-10">
                         <p style="white-space: pre-line;">
                             {{ post.message }}
                         </p>
                     </div>
+
+                    <div class="col-xs-12 post-span" style="height: 30px;">
+                            <ul class="list-inline">
+                                <li style="margin-top: 5px;" >
+                                    <a href="{{ path('zectranet_user_page', {'user_id': post.userID }) }}" style="color:#555; word-wrap: break-word; white-space: normal;">
+                                        {{ post.user.name ~ ' ' ~ post.user.surname ~ ' (' ~ post.user.username ~ ')' }}
+                                    </a>
+                                </li>
+                                <li class="pull-right" style="margin-top: 4px;">
+
+                                    <small style="padding: 7px 0px 7px 14px;color:#aaa;border-left: 1px solid #dbdbdb;">Posted {{ post.posted | date('Y-m-d H:i') }}</small>
+
+                                </li>
+                            </ul>
+                    </div>
                 </div>
             {% endfor %}
         </div>
-        <form class="panel-footer" action="{{ path('zectranet_add_post_header_forum_thread', { 'thread_id': thread.id }) }}" method="post">
-            <div class="input-group">
-                <textarea name="message" class="form-control" rows="6" required></textarea>
-                <div class="input-group-addon" style="padding: 0;">
-                    <button type="submit" class="btn btn-default btn-primary" style="width: 132px; height: 132px;">
-                        Post
-                    </button>
-                </div>
-            </div>
-        </form>
+
+        <div class="col-md-1">
+
+            <img style="height: 40px; margin-top: 7px;" class="img-responsive" src="{{ asset('') }}documents/{{ thread.user.avatar }}">
+        </div>
+
+
+        <div class="col-md-10 coments-main" style="padding: 0px; margin: 10px 0px 90px -8px;">
+
+
+            <form action="{{ path('zectranet_add_post_header_forum_thread', { 'thread_id': thread.id }) }}" method="post">
+
+                <textarea name="message" ng-class="textareaSize" ng-change="comentEmpty()" ng-model="comentText" ng-focus="comentButtonFocus()" ng-blur="comentButtonUnFocus()" class="form-control" placeholder="{{ app.user.name ~ ' ' ~ app.user.surname }} type here your post"></textarea>
+
+                <button ng-click="clickButton()" type="submit" style="margin-top: 10px;" ng-class="comentButtonActive" ng-if="comentButton" class="btn btn-default btn-primary">
+                    Answer
+                </button>
+
+                <button style="margin-top: 10px;" class="btn btn-default" ng-if="comentButton" ng-click="closeForm()">
+                    Close
+                </button>
+
+            </form>
+        </div>
 
     </div>
+
+
 
 {% endblock %}
