--- a/src/ZectranetBundle/Resources/views/headerForumThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumThread.html.twig
@@ -82,7 +82,7 @@
         </div>
 
 
-        <div class="col-md-10 coments-main" style="padding: 0px; margin: 10px 0px 90px -8px;">
+        <div class="col-md-10 coments-main" style="padding: 0px; margin: 10px 0px 30px -8px;">
 
 
             <form action="{{ path('zectranet_add_post_header_forum_thread', { 'thread_id': thread.id }) }}" method="post">
@@ -90,7 +90,7 @@
                 <textarea name="message" ng-class="textareaSize" ng-change="comentEmpty()" ng-model="comentText" ng-focus="comentButtonFocus()" ng-blur="comentButtonUnFocus()" class="form-control" placeholder="{{ app.user.name ~ ' ' ~ app.user.surname }} type here your post"></textarea>
 
                 <button ng-click="clickButton()" type="submit" style="margin-top: 10px;" ng-class="comentButtonActive" ng-if="comentButton" class="btn btn-default btn-primary">
-                    Answer
+                    Post
                 </button>
 
                 <button style="margin-top: 10px;" class="btn btn-default" ng-if="comentButton" ng-click="closeForm()">
