--- a/src/ZectranetBundle/Resources/views/headerForum.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForum.html.twig
@@ -2,12 +2,41 @@
 
 {% block title %}{{ forum.name }}{% endblock %}
 
+{% block styles %}
+    {{ parent() }}
+
+    <link href="{{ asset('bundles/zectranet/css/QnAForum.css') }}" rel="stylesheet" type="text/css">
+
+{% endblock %}
+
 {% block body %}
     <div class="page-header">
         <div class="row">
-            <div class="col-md-9 col-xs-6" style="white-space: normal; word-wrap: break-word;">
-                <span style="font-size: 30px; font-family: 'PT Sans Narrow', sans-serif; font-weight: bold;">{{ forum.name }}</span>
-            </div>
+
+            {% if forum.ownerID == app.user.id or (is_granted('ROLE_ADMIN')) %}
+
+                <div class="col-md-9 col-xs-6" style="word-wrap: break-word; white-space: normal;">
+                    <div ng-click="setFormEdit()" ng-mouseleave="setFormNone()" style="display: inline-block;">
+                        <div ng-if="formStatus == 'formNone'" ng-mouseenter="setIconEdit()" ng-mouseleave="setIconNone()" id="spanLength" style="cursor: pointer;">
+                            <span style="font-size: 30px; font-family: 'PT Sans Narrow', sans-serif; font-weight: bold; padding: 0 5px;">{{ forum.name }}</span>
+                        <span ng-if="iconEdit" style="font-size: 30px; font-family: 'PT Sans Narrow', sans-serif; font-weight: bold; padding: 0 5px; border-left: 1px solid #ccc;">
+                            <i style="color: #A9A6A6;" class="fa fa-edit"></i>
+                        </span>
+                        </div>
+                        <form ng-class="formStatus" action="{{ path('zectranet_header_forum_edit_name', {'project_id' : forum.id}) }}" method="post">
+                            <input id="inputName" ng-focus="focus = true" ng-blur="setBlure()" type="text" value="{{ forum.name }}" name="newName" class="form-control" style="height: 44px; font-size: 18px;" required>
+                            <input type="submit" class="hidden">
+                        </form>
+                    </div>
+                </div>
+
+            {% else %}
+                <div class="col-md-9 col-xs-6">
+                    <span style="font-size: 30px; font-family: 'PT Sans Narrow', sans-serif; font-weight: bold;">{{ forum.name }}</span>
+                </div>
+
+            {% endif %}
+
             <div class="col-md-3 col-xs-6">
                 {% if forum.ownerID == app.user.id or (is_granted('ROLE_ADMIN')) %}
                     <div class="pull-right">
