--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -560,8 +560,9 @@
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-animate.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-busy.js') }}"></script>
     <script src="{{ asset('bundles/zectranet/js/draganddrop.js') }}"></script>
+    <script src="{{ asset('bundles/zectranet/js/AngularJS/scrollglue.js') }}" type="text/javascript"></script>
 
-	<script src="{{ asset('bundles/zectranet/js/Bootstrap/ui-bootstrap-tpls-0.10.0.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/zectranet/js/Bootstrap/ui-bootstrap-tpls-0.10.0.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/metisMenu.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/sb-admin-2.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/highlight.js') }}" type="text/javascript"></script>
