--- a/src/ZectranetBundle/Resources/views/office.html.twig
+++ b/src/ZectranetBundle/Resources/views/office.html.twig
@@ -205,7 +205,7 @@
                         <i class="fa fa-file"></i>
                     </button>
                 </span>
-                <textarea id="textarea-post"  name="message" class="form-control" rows="3" style="resize: vertical;font-size: 11px; height: 65px;" ng-model="message"></textarea>
+                <textarea id="textarea-post"  name="message" class="form-control" rows="3" ng-keypress="pressEnter($event, message)" style="resize: vertical;font-size: 11px; height: 65px;" ng-model="message"></textarea>
                 <span class="input-group-btn">
                     <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
                         <span>Post</span>
