--- a/src/ZectranetBundle/Resources/views/QnAForum.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAForum.html.twig
@@ -22,12 +22,11 @@
                         <span ng-if="iconEdit" style="font-size: 30px; font-family: 'PT Sans Narrow', sans-serif; font-weight: bold; padding: 0 5px; border-left: 1px solid #ccc;">
                             <i style="color: #A9A6A6;" class="fa fa-edit"></i>
                         </span>
-                        </div>
-                        <form ng-class="formStatus" action="{{ path('zectranet_QnA_forum_edit_name', {'project_id' : forum.id}) }}" method="post">
-                            <input id="inputName" ng-focus="focus = true" ng-blur="setBlure()" type="text" value="{{ forum.name }}" name="newName" class="form-control" style="height: 44px; font-size: 18px;" required>
-                            <input type="submit" class="hidden">
-                        </form>
                     </div>
+                    <form ng-class="formStatus" action="{{ path('zectranet_QnA_forum_edit_name', {'project_id' : forum.id}) }}" method="post">
+                        <input id="inputName" ng-focus="setFocus()" ng-blur="setBlure()" type="text" value="{{ forum.name }}" name="newName" class="form-control" style="font-size: 30px; font-family: 'PT Sans Narrow', sans-serif; font-weight: bold; height: 44px;" required>
+                        <input type="submit" class="hidden">
+                    </form>
                 </div>
 
             {% else %}
@@ -37,18 +36,18 @@
 
             {% endif %}
 
-            <div class="col-md-2">
+            <div class="col-md-2" style="font-size: 18px;">
                 {% if forum.ownerID == app.user.id or (is_granted('ROLE_ADMIN')) %}
                     <div class="pull-right">
                         <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Delete This Project">
                             <a style="cursor: pointer; text-decoration: none;" data-toggle="modal" data-target="#delete_QnA_project">
-                                <i class="fa text-danger fa-fw fa-trash  fa-2x"></i>
+                                <i class="fa text-danger fa-fw fa-trash"></i>
                             </a>
                         </div>
 
                         <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Settings">
                             <a href="{{ path('zectranet_QnA_settings', {'project_id': forum.id}) }}" style="cursor: pointer; text-decoration: none;">
-                                <i class="fa text-primary fa-fw fa-gear fa-2x"></i>
+                                <i class="fa text-primary fa-fw fa-gear"></i>
                             </a>
                         </div>
 
