--- a/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
@@ -47,18 +47,18 @@
 
             {% endif %}
 
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-6 col-md-3" style="font-size: 18px;">
                 {% if forum.ownerID == app.user.id or (is_granted('ROLE_ADMIN')) %}
                     <div class="pull-right">
                         <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Delete This Project">
                             <a style="cursor: pointer; text-decoration: none;" data-toggle="modal" data-target="#delete_private_project">
-                                <i class="fa text-danger fa-fw fa-trash  fa-2x"></i>
+                                <i class="fa text-danger fa-fw fa-trash"></i>
                             </a>
                         </div>
 
                         <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Settings">
                             <a style="cursor: pointer; text-decoration: none;" href="{{ path('zectranet_show_header_forum_settings', {'project_id': forum.id}) }}">
-                                <i class="fa text-primary fa-fw fa-gear fa-2x"></i>
+                                <i class="fa text-primary fa-fw fa-gear"></i>
                             </a>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
 
     <div class="col-md-12 panel panel-default forum-shadow forum-border-topradius">
         <div class="row">
-            <div class="col-md-12" style="color: #fff; background-color: #337AB7;">
+            <div class="col-md-12 post-span" style="color: #999;">
                 <h4 align="left">{{ sub.header.title }}</h4>
             </div>
         </div>
