--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -11,7 +11,6 @@
 
 	{% block styles %}
 		<link href="{{ asset('bundles/zectranet/css/bootstrap.css') }}" rel="stylesheet" type="text/css">
-
 		<link href="{{ asset('bundles/zectranet/css/font-awesome.css') }}" rel="stylesheet" type="text/css">
 		<link href="{{ asset('bundles/zectranet/css/mainv_001.css') }}" rel="stylesheet" type="text/css">
 		<link href="{{ asset('bundles/zectranet/css/footerst.css') }}" rel="stylesheet" type="text/css">
@@ -561,6 +560,7 @@
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-busy.js') }}"></script>
     <script src="{{ asset('bundles/zectranet/js/draganddrop.js') }}"></script>
     <script src="{{ asset('bundles/zectranet/js/AngularJS/scrollglue.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/zectranet/js/AngularJS/angular-messages.min.js') }}" type="text/javascript"></script>
 
     <script src="{{ asset('bundles/zectranet/js/Bootstrap/ui-bootstrap-tpls-0.10.0.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/metisMenu.js') }}" type="text/javascript"></script>
