--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -1,6 +1,14 @@
 {% extends '@Zectranet/index.html.twig' %}
 
-{% block title %}{{ task.name }}{% endblock %}
+{% set idInArray = -1 %}
+{% if task.parent %}
+    {% for i, item in task.parent.subtasks if item.id == task.id %}
+        {% set idInArray = i + 1 %}
+    {% endfor %}
+{% endif %}
+
+{% set id = (task.parent) ? '[' ~ task.parent.id ~ '.' ~ idInArray ~ '] ' : '[' ~ task.id ~ '] '  %}
+{% block title %}{{ id ~ task.name }}{% endblock %}
 
 {% block body %}
     <div ng-cloak>
