--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -147,7 +147,7 @@
                         </a>
 
                         <ul class="notifier dropdown-menu dropdown-tasks noclose list-group">
-                            <li ng-if="requests.contactRequests.length == 0" class="list-group-item">
+                            <li ng-if="(requests.contactRequests.length == 0) && (contactNotifications.length == 0)" class="list-group-item">
                                 <h5 class="text-info">You haven't any contact requests</h5>
                             </li>
                             <li ng-repeat="request in requests.contactRequests | limitTo: 3" class="list-group-item">
