--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -565,7 +565,7 @@
                     </div>
 
                     <div id="coments" class="tab-pane fade in active" ng-init="getPosts(0, 100)">
-                        <div ng-style="{'height': (posts.length > 0) ? '500px' : '100px'}" style="overflow-y: auto;height: 500px; " id="posts-panel" >
+                        <div scroll-glue="true" style="overflow: auto; height: 500px;" id="posts-panel" >
                             <div class="coments" ng-repeat="post in posts"  >
                                 <p style="margin-top: 25px;" ng-init="avatar = generateAsset(urlAsset, 'documents/' + post.user.avatar)">
                                     <a ng-init="Href = userHref(post.user.id)" ng-href="[[Href]]" style="display: inline-block; text-decoration: none;">
