--- a/web/bundles/zectranet/templates/chat.html
+++ b/web/bundles/zectranet/templates/chat.html
@@ -1,4 +1,4 @@
-<ul class="chat">
+<ul class="chat" scroll-glue="true" style="overflow: auto; height: 425px;">
     <li highlight ng-repeat="post in posts" style="border-bottom: none;" class="clearfix" ng-class="{'right': USER_ID == post.user.id, 'left': USER_ID != post.user.id }">
         <span class="chat-img"
               ng-class="{'pull-right': USER_ID == post.user.id, 'pull-left': USER_ID != post.user.id }"
@@ -11,7 +11,7 @@
                         ng-class="{'pull-right': USER_ID == post.user.id, 'pull-left': USER_ID != post.user.id }">
                     [[  post.user.username  ]]
                 </strong>
-                <div  ng-if="( trueorfalse($index) == true)" class=" editpost">
+                <div  ng-if="(trueorfalse($index) == true)" class="editpost">
                     <i class="fa fa-pencil-square-o"></i>
                 </div>
 
