ID of task in the header of the page

--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -529,7 +529,7 @@
                 <!-- End of Task Nav Tabs -->
 
                 <div id="tasks-tab-content" class="tab-content">
-                    <div id="task-logs" class="tab-pane fade" style="max-height: 500px; min-height: 100px; overflow-y: auto;">
+                    <div id="task-logs" class="tab-pane fade" style="max-height: 500px; min-height: 100px; overflow-y: auto;" scroll-glue="true">
                         <table class="table">
                             <thead>
                             <tr>
